remove toList.